# proxyman-helper

./: .gitignore  CLAUDE.md  enhancements_plan.md  example-server.js  index.html  package-lock.json  package.json  readme.md  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
data/: profiles.json
docs/: DESIGN_TEMPLATE_VALUES.md  MACOS_DAMAGED_APP.md
icons/: Assets.car
interfaces/: profile.ts  request.ts  subProfile.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: blocks.rs  ca.rs  forward_proxy.rs  handlers.rs  lib.rs  logs.rs  main.rs  matching.rs  process_lookup.rs  proxy.rs  response.rs  server.rs  state.rs  store.rs  system_proxy.rs  template.rs  types.rs
src/api/: blocks.ts  libraries.ts  logs.ts  profiles.ts  proxy.ts
src/components/blocks/: ActivePanel.tsx  BlockCard.tsx  LibraryPanel.tsx  LibraryTreePanel.tsx
src/components/debug/: DebugPanel.tsx  FeedDetailPanels.tsx  KeyValueTable.tsx  ResponseBodyView.tsx  feedUtils.ts
src/components/layout/: Sidebar.tsx
src/components/modals/: BlockBuilderModal.tsx  CreateProfileModal.tsx  CreateSubprofileModal.tsx  EditProfileModal.tsx  EditSubprofileModal.tsx  ManageProfilesModal.tsx  ManageSubprofilesModal.tsx  Modal.tsx
src/components/settings/: SettingsPanel.tsx  ThemeSettings.tsx
src/data/: initialData.ts
src/hooks/: useBlocks.ts  useProfiles.ts  useSubprofiles.ts
src/theme/: theme.ts
src/types/: block.ts  profile.ts  theme.ts
