[package]
name = "local-proxy"
version = "0.1.0"
description = "Local proxy desktop app"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
git2 = "0.18"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
