[package]
name = "mapy"
version = "0.1.0"
description = "Mapy desktop app"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
time = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
hudsucker = { version = "0.22", features = ["rcgen-ca"] }
local-ip-address = "0.6"
rcgen = "0.13"
http-body-util = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
